--- a/village.html
+++ b/village.html
@@ -89,7 +89,7 @@ footer{
             <a href="page-transition-collection.html"><button class="btnplan" type="button" style="cursor: pointer;">Collection</button></a>
             <button class="btnplan" type="button">Visite</button>
             <button class="btnplan" type="button">Infos</button>
-            <a href="village.html"><button class="btnplan" type="button">Village</button></a>
+            <a href="village.html"><button class="btnplan" type="button" style="cursor: pointer;">Village</button></a>
         </div>
     </footer>
 </body>
