--- a/page-transition-collection.html
+++ b/page-transition-collection.html
@@ -29,7 +29,7 @@
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
             <a href="page-transition-collection.html"><button class="btnplan" type="button" style="cursor: pointer;">Collection</button></a>
             <button class="btnplan" type="button">Visite</button>
-            <button class="btnplan" type="button">Infos</button>
+            <a href="infos.html"><button class="btnplan" type="button"style="cursor: pointer;">Infos</button></a>
             <a href="village.html"><button class="btnplan" type="button"style="cursor: pointer;">Village</button></a>
         </div>
     </footer>
