--- a/infos.html
+++ b/infos.html
@@ -18,6 +18,7 @@ html, body {
 text-align: center;
 font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 color: #66666688;
+background-color: rgb(255, 255, 255);
 border:#666 1px solid;
 margin:2px;
 font-size:34px;
