--- a/village.html
+++ b/village.html
@@ -42,7 +42,7 @@ html, body {
 	position: absolute;
 	bottom: 0; left: 0;
 	width: 100%;
-    background-color: #957c69;
+    background-color: #957c69a2;;
     height: 65px;
 }
 .btnplan {
@@ -62,6 +62,8 @@ html, body {
     
 }
 
+
+
 footer{
     text-align: center;
 }
@@ -73,7 +75,7 @@ footer{
         <img  src="https://www.monesties.fr/userfile/img-template-maker/logo/logo-web-monesties_5.png" style="width:350px">
     </div>
 
-    <a href="https://code-nature81.github.io/Monesties-8-Lieux---Voir/"><button class="btncircuit" type="button">Circuit urbain:<br>Carte Interactive</button></a>
+    <a href="https://umap.openstreetmap.fr/fr/map/monesties_742837#17/44.07103/2.09698"><button class="btncircuit" type="button">Circuit urbain:<br>Carte Interactive</button></a>
 
 
 
