--- a/infos.html
+++ b/infos.html
@@ -14,12 +14,22 @@ html, body {
     overflow: hidden;
 }
 
+img#bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .btn{
+position: relative;
 text-align: center;
 font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-color: #66666688;
-background-color: rgb(255, 255, 255);
-border:#666 1px solid;
+color: #000000;
+background-color: rgba(255, 255, 255, 0.451);
+border:#000000 1px solid;
 margin:2px;
 font-size:34px;
 cursor:pointer;
@@ -33,7 +43,7 @@ border-radius:50%;
 .centre{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
+    margin-top: 50%;
     text-align: center;
 }
 
@@ -41,7 +51,7 @@ border-radius:50%;
 	position: absolute;
 	bottom: 0; left: 0;
 	width: 100%;
-    background-color: #957c69;
+    background-color: #957c69a2;;
     height: 65px;
 }
 .btnplan {
@@ -65,8 +75,28 @@ footer{
     text-align: center;
 }
 
+@media screen and (max-width:913px) and (min-width:819px) {
+    .btn{
+        width: 500px;
+        height: 500px;
+        font-size: 60px;
+    }
+    
+}
+
+@media screen and  (min-width:1023px) {
+    .centre{
+        margin-top: 200px;
+    }
+    
+}
+
+
 </style>
 <body>
+
+    <img id="bg" src="musee.jpg" alt="" />
+
     <div class="centre">
         <a href="https://www.monesties.fr/musee-bajen-vega-monesties-tarn_fr.html"><button class="btn" type="button" style="cursor: pointer;">Musée<br>Bajén et Vega </button></a>
     </div>
