--- a/plan-fr.html
+++ b/plan-fr.html
@@ -76,7 +76,7 @@ main{
 	position: absolute;
 	bottom: 0; left: 0;
 	width: 100%;
-    background-color: #957c69;
+    background-color: #957c69a2;;
     height: 65px;
 }
 .btnplan {
