--- a/plan-fr.html
+++ b/plan-fr.html
@@ -93,7 +93,7 @@ main{
     background-color: rgba(220, 0, 0, 0);
     background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-    
+    width: 17%;
 }
 
 footer{
@@ -190,7 +190,7 @@ h1{
     <footer>
         <div id="piedpage">
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
-            <a href="page-transition-collection.html"><button class="btnplan" type="button" style="cursor: pointer;">Collection</button></a>
+            <a href="page-transition-collection.html"><button class="btnplan" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Collection</button></a>
             <button class="btnplan" type="button">Visite</button>
             <a href="infos.html"><button class="btnplan" type="button"style="cursor: pointer;">Infos</button></a>
             <a href="village.html"><button class="btnplan" type="button" style="cursor: pointer;">Village</button></a>
