--- a/page-transition-collection.html
+++ b/page-transition-collection.html
@@ -27,7 +27,7 @@
     <footer>
         <div id="piedpage">
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
-            <a href="page-transition-collection.html"><button class="btnplan" type="button" style="cursor: pointer;">Collection</button></a>
+            <a href="page-transition-collection.html"><button class="btnplan" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Collection</button></a>
             <button class="btnplan" type="button">Visite</button>
             <a href="infos.html"><button class="btnplan" type="button"style="cursor: pointer;">Infos</button></a>
             <a href="village.html"><button class="btnplan" type="button"style="cursor: pointer;">Village</button></a>
