--- a/M-V.html
+++ b/M-V.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    
+html, body {
+	margin: 0;
+	padding: 5px;
+	height: 100vh;
+    overflow-x: hidden;
+}
+h1{
+        text-align: center;
+    }
+</style>
 <body>
     <h1>Martine Vega</h1>
 
-    <img src="Vega.jpg">
+    <img src="Vega.jpg" style="margin: auto; display: flex;">
 
     <p>Du 28 novembre au 16 décembre, à l'Hôtel Rochegude*, l'association des Amis de F.Bajén-M. Vega vous invite à découvrir une exposition exceptionnelle consacrée à Martine Vega. Elle comprendra 68 œuvres provenant de collections privées dont quelques-unes du début de sa carrière.
 
