--- a/F-B.html
+++ b/F-B.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    
+    html, body {
+        margin: 0;
+        padding: 5px;
+        height: 100vh;
+        overflow-x: hidden;
+    }
+    h1{
+        text-align: center;
+    }
+    </style>
 <body>
     <h1>Francisco Bajen – Artiste Peintre Œuvres</h1>
 
-    <img src="francisco-bajen-peintre-cote.jpg">
+    <img src="francisco-bajen-peintre-cote.jpg"style="margin: auto; display: flex;">
     <p>le peintre du silence
 
         Francisco Bajén était né en Espagne en 1912, à la suite de la guerre civile, il s’exile en France, il arrive dans le Tarn en 1939 puis s’installe à Saint-Juéry, et se retira par la suite à Albi. Le peintre Francisco Bajèn est mort en 2014 à l’âge de 102 ans
