--- a/plan-fr.html
+++ b/plan-fr.html
@@ -24,7 +24,7 @@ main{
         font-size: 35px;
         text-align: center;
         color: #957c69;
-        font-family: ClanPro-Black, arial,sans-serif;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
 
     .btn {
@@ -477,12 +477,12 @@ h1{
 
     <div class="wrapper">
         <img src="https://api.iconify.design/heroicons:information-circle-solid.svg?color=%23a1701b" style="width: 25px;">
-        <div class="tooltip"><a href="F-B.html" style="text-decoration: none; color: #fff;">Collection Francisco Bajèn &nbsp;></a></div>
+        <div class="tooltip"><a href="F-B.html" style="text-decoration: none; color: #fff;">Biographie Francisco Bajèn &nbsp;></a></div>
     </div>
 
     <div class="wrapper1">
         <img src="https://api.iconify.design/heroicons:information-circle-solid.svg?color=%23a1701b" style="width: 25px;">
-        <div class="tooltip1"><a href="M-V.html" style="text-decoration: none; color: #fff;">Collection Martine Vega &nbsp;></a></div>
+        <div class="tooltip1"><a href="M-V.html" style="text-decoration: none; color: #fff;">Biographie Martine Vega &nbsp;></a></div>
     </div>
 
        <!-- <div class="btn1">
