--- a/infos.html
+++ b/infos.html
@@ -54,6 +54,7 @@ border-radius:50%;
     background-color: #ffffff;;
     height: 85px;
     border: #000000 solid 1px;
+    border-bottom: #ffffff;
 }
 .btnplan {
     
@@ -208,14 +209,14 @@ footer{
     <img id="bg" src="musee.jpg" alt="" />
 
     <div class="centre">
-        <a href="https://www.monesties.fr/musee-bajen-vega-monesties-tarn_fr.html"><button class="btn" type="button" style="cursor: pointer;">Musée<br>Bajén et Vega </button></a>
+        <a href="Iframe-info.html"><button class="btn" type="button" style="cursor: pointer;">Musée<br>Bajén et Vega </button></a>
     </div>
 
 
     <footer>
         <div id="piedpage">
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
-            <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Collection</button></a>
+            <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Biographie</button></a>
             <button class="btnvisite" type="button">Visite</button>
             <a href="infos.html"><button class="btninfo" type="button"style="cursor: pointer;">Infos</button></a>
             <a href="village.html"><button class="btnvillage" type="button" style="cursor: pointer;">Village</button></a>
