--- a/F-B.html
+++ b/F-B.html
@@ -196,7 +196,7 @@ footer{
         <footer>
             <div id="piedpage">
                 <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
-                <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Collection</button></a>
+                <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Biographie</button></a>
                 <button class="btnvisite" type="button">Visite</button>
                 <a href="infos.html"><button class="btninfo" type="button"style="cursor: pointer;">Infos</button></a>
                 <a href="village.html"><button class="btnvillage" type="button" style="cursor: pointer;">Village</button></a>
