--- a/plan-fr.html
+++ b/plan-fr.html
@@ -477,12 +477,12 @@ h1{
 
     <div class="wrapper">
         <img src="https://api.iconify.design/heroicons:information-circle-solid.svg?color=%23a1701b" style="width: 25px;">
-        <div class="tooltip"><a href="F-B.html" style="text-decoration: none; color: #fff;">Biographie Francisco Bajèn &nbsp;></a></div>
+        <div class="tooltip"><a href="F-B.html" style="text-decoration: none; color: #fff;">Collection Francisco Bajèn &nbsp;&nbsp;></a></div>
     </div>
 
     <div class="wrapper1">
         <img src="https://api.iconify.design/heroicons:information-circle-solid.svg?color=%23a1701b" style="width: 25px;">
-        <div class="tooltip1"><a href="M-V.html" style="text-decoration: none; color: #fff;">Biographie Martine Vega &nbsp;></a></div>
+        <div class="tooltip1"><a href="M-V.html" style="text-decoration: none; color: #fff;">Collection Martine Vega &nbsp;&nbsp;></a></div>
     </div>
 
        <!-- <div class="btn1">
@@ -494,7 +494,7 @@ h1{
     <footer>
         <div id="piedpage">
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
-            <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Collection</button></a>
+            <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Biographie</button></a>
             <button class="btnvisite" type="button">Visite</button>
             <a href="infos.html"><button class="btninfo" type="button"style="cursor: pointer;">Infos</button></a>
             <a href="village.html"><button class="btnvillage" type="button" style="cursor: pointer;">Village</button></a>
