--- a/index.html
+++ b/index.html
@@ -76,9 +76,25 @@ html, body {
   
 }
 
+h1{
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: oblique;
+  font-size: 70px;
+}
+
+@media screen and (max-width:760px) {
+
+  h1{
+    font-size: 45px;
+  }
+  
+}
 
 </style>
 <body style="overflow: hidden;">
+
+  <h1>Musée Barjén - Vega</h1>
 
     <img  src="https://www.monesties.fr/userfile/img-template-maker/logo/logo-web-monesties_5.png">
 
