--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ html, body {
 }
     
     img{
-      width: 200px;
+      width: 400px;
       position: absolute;
       top: 35%;
       margin-left: 50%;
@@ -89,6 +89,22 @@ h1{
     font-size: 45px;
   }
   
+}
+
+@media screen and (max-width:1024px) and (min-width:400px) {
+
+img{
+  width: 400px;
+}
+
+}
+
+@media screen and (max-width: 394px) and (min-width:150px){
+
+img{
+  width: 300px;
+}
+
 }
 
 </style>
