--- a/plan-fr.html
+++ b/plan-fr.html
@@ -23,6 +23,7 @@ main{
     h1{
         font-size: 35px;
         text-align: center;
+        font-style: oblique;
         color: #957c69;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
