--- a/F-B.html
+++ b/F-B.html
@@ -32,6 +32,7 @@
     background-color: #ffffff;;
     height: 85px;
     border-top: #000000 solid 1px;
+    border-bottom: #ffffff;
     position: fixed;
 }
 .btnplan {
