--- a/plan-fr.html
+++ b/plan-fr.html
@@ -80,6 +80,7 @@ main{
     background-color: #ffffff;;
     height: 85px;
     border: #000000 solid 1px;
+    border-bottom: #ffffff;
 }
 .btnplan {
     
