--- a/village.html
+++ b/village.html
@@ -46,6 +46,7 @@ html, body {
     background-color: #ffffff;;
     height: 85px;
     border: #000000 solid 1px;
+    border-bottom: #ffffff;
 }
 .btnplan {
     
