--- a/plan-fr.html
+++ b/plan-fr.html
@@ -479,7 +479,7 @@ h1{
 
     <div class="wrapper">
         <img src="https://api.iconify.design/heroicons:information-circle-solid.svg?color=%23a1701b" style="width: 25px;">
-        <div class="tooltip"><a href="F-B.html" style="text-decoration: none; color: #fff;">Collection Francisco Bajèn &nbsp;&nbsp;></a></div>
+        <div class="tooltip"><a href="collec-Bajen.html" style="text-decoration: none; color: #fff;">Collection Francisco Bajèn &nbsp;&nbsp;></a></div>
     </div>
 
     <div class="wrapper1">
