--- a/page-transition-collection.html
+++ b/page-transition-collection.html
@@ -14,11 +14,11 @@
     <div class="container">
         <div class="split left">
             <h1>Francisco Bajén</h1>
-            <a href="" class="button">ICI</a>
+            <a href="F-B.html" class="button">ICI</a>
         </div>
         <div class="split right"></a>
             <h1>Martine Vega</h1>
-            <a href="" class="button">ICI</a>
+            <a href="M-V.html" class="button">ICI</a>
         </div>    
 
 
