--- a/F-B.html
+++ b/F-B.html
@@ -163,7 +163,7 @@
 img{
     margin:auto;
     display:flex;
-    width: 28%;
+    width: 20%;
 }
 
 footer{
@@ -183,7 +183,7 @@ footer{
 <body>
     <h1>Francisco Bajen – Artiste Peintre Œuvres</h1>
 
-    <img src="francisco-bajen-peintre-cote.jpg">
+    <img src="francisco.jpg">
     <p>le peintre du silence
 
         Francisco Bajén était né en Espagne en 1912, à la suite de la guerre civile, il s’exile en France, il arrive dans le Tarn en 1939 puis s’installe à Saint-Juéry, et se retira par la suite à Albi. Le peintre Francisco Bajèn est mort en 2014 à l’âge de 102 ans
