--- a/F-B.html
+++ b/F-B.html
@@ -20,9 +20,11 @@
         position: relative;
         display: table;
         height: 1000px;
+        background-color: #000000;
     }
     h1{
         text-align: center;
+        color: darkgoldenrod;
     }
 
     #piedpage {
@@ -184,7 +186,7 @@ footer{
     <h1>Francisco Bajen – Artiste Peintre Œuvres</h1>
 
     <img src="francisco.jpg">
-    <p>le peintre du silence
+    <p style="color: #ffffff;">le peintre du silence
 
         Francisco Bajén était né en Espagne en 1912, à la suite de la guerre civile, il s’exile en France, il arrive dans le Tarn en 1939 puis s’installe à Saint-Juéry, et se retira par la suite à Albi. Le peintre Francisco Bajèn est mort en 2014 à l’âge de 102 ans
         
