--- a/F-B.html
+++ b/F-B.html
@@ -27,6 +27,10 @@
         color: darkgoldenrod;
     }
 
+    p{
+        font-size: 18px;
+    }
+
     #piedpage {
 	
 	bottom: 0; left: 0;
@@ -186,7 +190,7 @@ footer{
     <h1>Francisco Bajen – Artiste Peintre Œuvres</h1>
 
     <img src="francisco.jpg">
-    <p style="color: #ffffff;">le peintre du silence
+    <p style="color: #ffffff;">Le peintre du silence
 
         Francisco Bajén était né en Espagne en 1912, à la suite de la guerre civile, il s’exile en France, il arrive dans le Tarn en 1939 puis s’installe à Saint-Juéry, et se retira par la suite à Albi. Le peintre Francisco Bajèn est mort en 2014 à l’âge de 102 ans
         
