--- a/F-B.html
+++ b/F-B.html
@@ -24,6 +24,8 @@
     }
     h1{
         text-align: center;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-style: italic;
         color: darkgoldenrod;
     }
 
