--- a/village.html
+++ b/village.html
@@ -33,7 +33,7 @@ html, body {
  
   
   background-color: #000000;
-  border-color: #000000;
+  border: 1px solid darkgoldenrod;
   position: absolute;
   top: 48%;
   left: 50%;
@@ -192,7 +192,7 @@ footer{
 
 <body style="overflow: hidden;">
 
-    <h1 style="color: darkgoldenrod; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-style: italic; text-align: center; margin-top: 5%;">Carte Interactive</h1>
+    <h1 style="color: darkgoldenrod; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-style: italic; text-align: center; margin-top: 5%;">Visite du village<br><br>Carte Interactive</h1>
     
 
     <a href="carte-footer.html"><button class="btncircuit" type="button"><img src="https://api.iconify.design/gis:poi-map.svg?color=%23b8860b" style="width: 248px;"></button></a>
