--- a/village.html
+++ b/village.html
@@ -53,10 +53,10 @@ border-radius:50%;
 	position: absolute;
 	bottom: 0; left: 0;
 	width: 100%;
-    background-color: #ffffff;;
+    background-color: #000000;;
     height: 85px;
     border: #000000 solid 1px;
-    border-bottom: #ffffff;
+    border-bottom: #000000;
 }
 .btnplan {
     
@@ -69,14 +69,14 @@ border-radius:50%;
     font-style: italic;
     margin-left: 2px;
     margin-top: 1px;
-    color: #000000;
+    color: #ffffff;
     /*text-shadow: 1px 1px 1px #000;*/
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     /*background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));*/
     /*box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);*/
     width: 17%;
-    background-image: url(https://api.iconify.design/teenyicons:floorplan-solid.svg?color=%23000000);
+    background-image: url(https://api.iconify.design/teenyicons:floorplan-solid.svg?color=%23ffffff);
     background-repeat: no-repeat;
     background-position: 50% 13px;
     background-size: 32px;
@@ -93,14 +93,14 @@ border-radius:50%;
     font-style: italic;
     margin-left: 2px;
     margin-top: 1px;
-    color: #000000;
+    color: #ffffff;
     /*text-shadow: 1px 1px 1px #000;*/
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     /*background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));*/
     /*box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);*/
     width: 17%;
-    background-image: url(https://api.iconify.design/clarity:help-info-solid.svg?color=%23000000);
+    background-image: url(https://api.iconify.design/clarity:help-info-solid.svg?color=%23ffffff);
     background-repeat: no-repeat;
     background-position: 50% 15px;
     background-size: 28px;
@@ -118,14 +118,14 @@ border-radius:50%;
     font-style: italic;
     margin-left: 2px;
     margin-top: 1px;
-    color: #000000;
+    color: darkgoldenrod;
     /*text-shadow: 1px 1px 1px #000;*/
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     /*background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));*/
     /*box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);*/
     width: 17%;
-    background-image: url(https://api.iconify.design/healthicons:village-outline.svg?color=%23000000);
+    background-image: url(https://api.iconify.design/healthicons:village-outline.svg?color=%23b8860b);
     background-repeat: no-repeat;
     background-position: 50% 10px;
     background-size: 41px;
@@ -143,14 +143,14 @@ border-radius:50%;
     font-style: italic;
     margin-left: 2px;
     margin-top: 1px;
-    color: #000000;
+    color: #ffffff;
     /*text-shadow: 1px 1px 1px #000;*/
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     /*background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));*/
     /*box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);*/
     width: 17%;
-    background-image: url(https://api.iconify.design/simple-icons:musescore.svg?color=%23000000);
+    background-image: url(https://api.iconify.design/simple-icons:musescore.svg?color=%23ffffff);
     background-repeat: no-repeat;
     background-position: 50% 10px;
     background-size: 35px;
@@ -168,14 +168,14 @@ border-radius:50%;
     font-style: italic;
     margin-left: 2px;
     margin-top: 1px;
-    color: #000000;
+    color: #ffffff;
     /*text-shadow: 1px 1px 1px #000;*/
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     /*background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));*/
     /*box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);*/
     width: 17%;
-    background-image: url(https://api.iconify.design/fluent-mdl2:video-360-generic.svg?color=%23000000);
+    background-image: url(https://api.iconify.design/fluent-mdl2:video-360-generic.svg?color=%23ffffff);
     background-repeat: no-repeat;
     background-position: 50% 10px;
     background-size: 35px;
