--- a/plan-fr.html
+++ b/plan-fr.html
@@ -24,7 +24,7 @@ main{
         font-size: 35px;
         text-align: center;
         font-style: oblique;
-        color: #957c69;
+        color: darkgoldenrod;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
 
