--- a/collec-Bajen.html
+++ b/collec-Bajen.html
@@ -113,7 +113,7 @@ header{
         <img src="musée-Bajen.jpg">
     </div>
 
-    <div class="container2"><a href="" style="text-decoration: none;">
+    <div class="container2"><a href="femme-colombe.html" style="text-decoration: none;">
         <div class="box">
             <div class="content">
                 <table style="text-decoration: none;">
@@ -126,7 +126,7 @@ header{
     </div>
     <hr size="1" width="100%" align="left" color="darkgoldenrod">
 
-    <div class="container2"><a href="" style="text-decoration: none;">
+    <div class="container2"><a href="coin-du-feu.html" style="text-decoration: none;">
         <div class="box">
             <div class="content">
                 <table style="text-decoration: none;">
@@ -139,7 +139,7 @@ header{
     </div>
     <hr size="1" width="100%" align="left" color="darkgoldenrod">
 
-    <div class="container2"><a href="" style="text-decoration: none;">
+    <div class="container2"><a href="Nue.html" style="text-decoration: none;">
         <div class="box">
             <div class="content">
                 <table style="text-decoration: none;">
