--- a/collec-Vega.html
+++ b/collec-Vega.html
@@ -130,7 +130,7 @@ header{
         <div class="box">
             <div class="content">
                 <table style="text-decoration: none;">
-                    <td><img src="vegatableau2.jpg" style="border-radius:5%; width: 200px;"></td>
+                    <td><img src="vegatableau2.jpg" style="border-radius:5%; width: 200px; height: 75px;"></td>
                     <td><p>"titre"</p></td>
                     <td><img src="https://api.iconify.design/material-symbols:arrow-forward-ios-rounded.svg?color=%23ffffff" style="margin-left:193%; margin-top: 20px;"></td>
                 </table>
