--- a/plan-fr.html
+++ b/plan-fr.html
@@ -484,7 +484,7 @@ h1{
 
     <div class="wrapper1">
         <img src="https://api.iconify.design/heroicons:information-circle-solid.svg?color=%23a1701b" style="width: 25px;">
-        <div class="tooltip1"><a href="M-V.html" style="text-decoration: none; color: #fff;">Collection Martine Vega &nbsp;&nbsp;></a></div>
+        <div class="tooltip1"><a href="collec-Vega.html" style="text-decoration: none; color: #fff;">Collection Martine Vega &nbsp;&nbsp;></a></div>
     </div>
 
        <!-- <div class="btn1">
