--- a/Iframe-info.html
+++ b/Iframe-info.html
@@ -58,14 +58,14 @@
     font-style: italic;
     margin-left: 2px;
     margin-top: 1px;
-    color: #000000;
+    color: darkgoldenrod;
     /*text-shadow: 1px 1px 1px #000;*/
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
     /*background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));*/
     /*box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);*/
     width: 17%;
-    background-image: url(https://api.iconify.design/clarity:help-info-solid.svg?color=%23000000);
+    background-image: url(https://api.iconify.design/clarity:help-info-solid.svg?color=%23b8860b);
     background-repeat: no-repeat;
     background-position: 50% 15px;
     background-size: 28px;
