--- a/testMp3d.html
+++ b/testMp3d.html
@@ -164,7 +164,7 @@ footer{
 
 </style>
 <body>
-    <iframe width='853' height='480' src='https://my.matterport.com/show/?m=vExLPMRAGR7' frameborder='0' allowfullscreen allow='xr-spatial-tracking'></iframe>
+    <iframe width='853' height='480' src='https://my.matterport.com/show/?m=KFa1rxb2kTn' frameborder='0' allowfullscreen allow='xr-spatial-tracking'></iframe>
 
 
     <footer>
