--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ img{
 </style>
 <body style="overflow: hidden;">
 
-  <h1>Musée Barjén - Vega</h1>
+  <h1>Musée Bajén - Vega</h1>
 
     <img  src="https://www.monesties.fr/userfile/img-template-maker/logo/logo-web-monesties_5.png">
 
