--- a/F-B.html
+++ b/F-B.html
@@ -8,7 +8,9 @@
 </head>
 
 <style>
-    
+    *, *:before, *:after 
+{ box-sizing: border-box; }
+
     html, body {
 	margin: 0;
 	padding: 0px;
@@ -21,7 +23,100 @@
 body{
     height: 1250px;
 }
+label .menu {
+  position: relative;
+  right: -00px;
+  top: -100px;
+  z-index: 100;
+  width: 100px;
+  height: 200px;
+  background: #393939;
+  border-radius: 50% 50% 50% 50%;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  box-shadow: 0 0 0 0 darkgoldenrod, 0 0 0 0 darkgoldenrod;
+  cursor: pointer;
+  
+}
 
+label .hamburger {
+  position: absolute;
+  top: 115px;
+  left: 20px;
+  width: 30px;
+  height: 2px;
+  background: darkgoldenrod;
+  display: block;
+  -webkit-transform-origin: center;
+  transform-origin: center;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+label .hamburger:after, label .hamburger:before {
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: darkgoldenrod;
+}
+
+label .hamburger:before { top: -10px; }
+
+label .hamburger:after { bottom: -10px; }
+
+label input { display: none; }
+
+label input:checked + .menu {
+  box-shadow: 0 0 0 100vw #393939, 0 0 0 100vh #393939;
+  border-radius: 0;
+  
+}
+
+label input:checked + .menu .hamburger {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  
+}
+
+label input:checked + .menu .hamburger:after {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  bottom: 0;
+  
+}
+
+label input:checked + .menu .hamburger:before {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  top: 0;
+  
+}
+
+label input:checked + .menu + ul { opacity: 1; }
+
+label ul {
+  z-index: 200;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: .25s 0s ease-in-out;
+  transition: .25s 0s ease-in-out;
+}
+
+label a {
+  margin-bottom: 1em;
+  display: block;
+  color: #f38630;
+  text-decoration: none;
+  
+}
 header{
     
     background-color: rgb(39, 39, 39);
@@ -228,10 +323,21 @@ footer{
 
     <header>
         <div id="header">
-            <a href="page-transition-collection.html"><img src="https://api.iconify.design/cil:arrow-circle-left.svg?color=%23ffffff" style="padding-top: 10px; width: 30px; margin-left: 0px;margin-top: -18px;"></a>
-            <h1 style="margin-top: -35px;">Francisco Bajén (1912-2014)</h1>
+            <a href=""><img src="" style="padding-top: 10px; width: 30px; margin-left: 20px;margin-top: -18px;"></a>
+            <h1 style="margin-top: -8px;">Francisco Bajén (1912-2014)</h1>
 
         </div>
+
+        <label>
+            <a href="page-transition-collection.html"><img src="https://api.iconify.design/cil:arrow-circle-left.svg?color=%23b8860b" style="padding-top: 10px; width: 30px; margin-left: 20px;margin-top: 5px;"></a>
+            <input type="checkbox">
+            <span class="menu"> <span class="hamburger"></span> </span>
+            <ul>
+              <li> <a href="#">Français</a> </li>
+              <li> <a href="#">Espagnol</a> </li>
+              <li> <a href="#">Anglais</a> </li>
+            </ul>
+            </label>
     </header>
 
  <div>
