--- a/Iframe-info.html
+++ b/Iframe-info.html
@@ -14,6 +14,30 @@
     overflow: hidden;
 }
 
+header{
+    
+    background-color: rgb(39, 39, 39);
+    height: 50px;
+
+}
+
+
+#header h1{
+    color: darkgoldenrod;
+    text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style:italic; 
+    margin-top: 20px;
+}
+
+#header a{
+    margin-left: 5px;
+    margin-top: 23px;
+}
+
+
+    
+
 #piedpage {
 	position: absolute;
 	bottom: 0; left: 0;
@@ -159,6 +183,14 @@ iframe{
 
 </style>
 <body>
+    <header>
+        <div id="header">
+            <a href="infos.html"><img src="https://api.iconify.design/cil:arrow-circle-left.svg?color=%23b8860b" style=" width: 30px; margin-left: 10px;margin-top: 10px;"></a>
+            <h1 style="margin-top: -40px;">Page information</h1>
+
+        </div>
+
+    </header>
 
     <iframe width="100%" height="92%" frameborder="0" allowfullscreen src="https://www.monesties.fr/musee-bajen-vega-monesties-tarn_fr.html"></iframe>
     <footer>
