--- a/Iframe-info.html
+++ b/Iframe-info.html
@@ -186,7 +186,7 @@ iframe{
     <header>
         <div id="header">
             <a href="infos.html"><img src="https://api.iconify.design/cil:arrow-circle-left.svg?color=%23b8860b" style=" width: 30px; margin-left: 10px;margin-top: 10px;"></a>
-            <h1 style="margin-top: -40px;">Page information</h1>
+            <h1 style="margin-top: -40px;">Page informations</h1>
 
         </div>
 
