--- a/village.html
+++ b/village.html
@@ -18,6 +18,26 @@ html, body {
     background-color: black;
 }
 
+header{
+    
+    background-color: rgb(39, 39, 39);
+    height: 50px;
+
+}
+
+
+#header h2{
+    color: darkgoldenrod;
+    text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style:italic; 
+}
+
+#header a{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
 .image {
   position: absolute;
   top: 35%;
@@ -192,9 +212,17 @@ footer{
 
 <body style="overflow: hidden;">
 
+    <header>
+        <div id="header">
+            <a href=""><img src="" style="padding-top: 10px; width: 30px;"></a>
+            <h2 style="margin-top: -8px;">Visite du village</h2>
+
+        </div>
+    </header>
+
    
 
-    <h1 style="color: darkgoldenrod; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-style: italic; text-align: center; margin-top: 5%;">Visite du village<br><br>Carte Interactive</h1>
+    <h1 style="color: darkgoldenrod; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-style: italic; text-align: center; margin-top: 5%;">Carte Interactive</h1>
     
 
     <a href="carte-footer.html"><button class="btncircuit" type="button"><img src="https://api.iconify.design/gis:poi-map.svg?color=%23b8860b" style="width: 248px;"></button></a>
