--- a/Iframe-info.html
+++ b/Iframe-info.html
@@ -192,7 +192,7 @@ iframe{
 
     </header>
 
-    <iframe width="100%" height="92%" frameborder="0" allowfullscreen src="https://www.monesties.fr/musee-bajen-vega-monesties-tarn_fr.html"></iframe>
+    <iframe width="100%" height="92%" frameborder="0" allowfullscreen src="https://tourisme-tarn-carmaux.fr/musee-bajen-vega/"></iframe>
     <footer>
         <div id="piedpage">
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
